--- a/aulas/frontend/src/global.css
+++ b/aulas/frontend/src/global.css
@@ -32,6 +32,19 @@ form input {
     margin-bottom: 10px;
 }
 
+form textarea {
+    width: 100%;
+    resize: vertical;
+    min-height: 140px;
+    max-height: 350px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    margin-bottom: 10px;
+    line-height: 24px;
+}
+
 .button {
     width: 100%;
     height: 60px;
